# get-somm

./: .deepeval_telemetry.txt  .env.example  .gitignore  CLAUDE.md  README.md  hello.py  langgraph.json  moon.yml  pyproject.toml
.cursor/rules/: get-somm-rule.mdc
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: static-checks.yml  unit-tests.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
.moon/: workspace.yml
backend/: .env.example  .gitignore  README.md  docker-compose.yml  moon.yml  pyproject.toml
backend/.deepeval/: .deepeval-cache.json
backend/.langgraph_api/: .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl
backend/agent/: configuration.py  graph.py  logger.py  prompts.py  state.py
backend/agent/nodes/: head_somm.py  tool_node.py
backend/agent/prompts/: beverage_director.py  head_somm.py
backend/agent/tools/: beer_reader.py  wine_reader.py
backend/agent/utils/: init_model.py
backend/synthetic_data/: my_dataset_contexts.json  my_dataset_fake.json
backend/tests/deep_eval/: create_dataset.py  test_cases.py
backend/tests/reports/results/: report.html
backend/tests/unit_tests/: conftest.py  test_configuration.py  test_head_somm.py  test_init_model.py
client/: index.py
frontend/: .gitignore  moon.yml  package-lock.json  package.json
frontend/components/: MyAssistant.tsx
frontend/components/assistant-ui/: attachment.tsx  thread.tsx
frontend/components/ui/: CameraCapture.tsx
frontend/lib/: chatApi.ts  utils.ts
langfuse/: docker-compose.yml
somm/: pyproject.toml
somm/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/agent/: configuration.py  graph.py  logger.py  prompts.py  state.py
src/agent/data/: beer_list.csv  fratellos_2025.csv
src/agent/nodes/: call_model.py  head_somm.py  tool_node.py
src/agent/tools/: wine_reader.py
synthetic_data/: my_dataset.json
tests/deep_eval/: test_cases.py
tests/unit_tests/: conftest.py  test_call_model.py  test_configuration.py  test_head_somm.py  test_init_model.py
ui/: README.md  package-lock.json
