[project]
name = "get-somm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepeval>=2.9.7",
    "langchain-experimental>=0.3.4",
    "langchain[anthropic]>=0.3.23",
    "langfuse>=3.0.0",
    "langgraph>=0.3.28",
    "langgraph-cli[inmem]>=0.2.3",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "python-dotenv>=1.1.0",
    "uuid>=1.30",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.1.1",
    "ruff>=0.11.5",
    "deepeval>=2.7.6",
    "chromadb>=1.0.7",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=src --cov-report=html:tests/reports/coverage --html=tests/reports/results/report.html --self-contained-html"
